# advent-of-code-2024

./: README.md
day-1/: Cargo.toml  README.md
day-1/src/: lib.rs  main.rs
day-2/: Cargo.toml  README.md
day-2/src/: lib.rs  main.rs
day-3/: Cargo.toml  README.md
day-3/src/: lib.rs  main.rs
day-4/: Cargo.toml  README.md
day-4/src/: lib.rs  main.rs
day-5/: Cargo.toml  README.md
day-5/src/: lib.rs  main.rs
